src/objects/Account_Administration__c.object
<CustomObject>
    <customHelpPage>UAAHelp</customHelpPage>
    <fields>
        <fullName>ActionText__c</fullName>
        <formula>TEXT(Action__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ActionText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <inlineHelpText>For Activations, profile and role are required.  For Deactivations, prospects should be transferred to another user. If the account is locked or If they do not know their password, select reset. Choose update to change a user’s role or profile.</inlineHelpText>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activ__c</fullName>
        <formula>IF(ISPICKVAL(TMN_User_Account__r.Job_Status__c, &quot;Yes&quot;), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_Action__c</fullName>
        <formula>IF( TEXT(Action__c) &lt;&gt;&quot;&quot;,  &quot;Action: &quot; + TEXT(Action__c) ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assign Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_Profile__c</fullName>
        <formula>IF( TEXT(Profile__c) &lt;&gt;&quot;&quot;,  &quot;Profile: &quot; + TEXT(Profile__c),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assign Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_Role__c</fullName>
        <formula>IF( TEXT(Role__c) &lt;&gt;&quot;&quot;,  &quot;Role: &quot; +  Role2Text__c ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assign Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_State_Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>State administrators are responsible for managing the region Route To’s for their state to ensure recruiters are receiving the appropriate prospects assigned to them from the web as well as prospect transfers.</inlineHelpText>
        <label>Assign State Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailSentStateAdmin__c</fullName>
        <label>EmailSentStateAdmin</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSent__c</fullName>
        <label>EmailSent</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <formula>IF( TMN_User_Account__r.Salesforce_User_Account__r.Email != null,TMN_User_Account__r.Salesforce_User_Account__r.Email, TMN_User_Account__r.Email__c)</formula>
        <inlineHelpText>Populated by TMN User Information.</inlineHelpText>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <formula>IF(TMN_User_Account__r.Salesforce_User_Account__r.EmployeeNumber !=null, TMN_User_Account__r.Salesforce_User_Account__r.EmployeeNumber, TMN_User_Account__r.Employee_Number__c)</formula>
        <inlineHelpText>Populated by TMN User Information.</inlineHelpText>
        <label>Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <formula>IF(TMN_User_Account__r.Salesforce_User_Account__r.IsActive = TRUE, &quot;Active Salesforce Account&quot;, TMN_User_Account__r.Employee_Type__c )</formula>
        <inlineHelpText>Populated by TMN User Information.</inlineHelpText>
        <label>Employee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <formula>IF(TMN_User_Account__r.Salesforce_User_Account__r.Title  !=null, TMN_User_Account__r.Salesforce_User_Account__r.Title , TMN_User_Account__r.Job_Title__c)</formula>
        <inlineHelpText>Populated by TMN User Information.</inlineHelpText>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Populated by TMN User Information.</inlineHelpText>
        <label>Work Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedUser__c</fullName>
        <formula>$User.FirstName + &quot; &quot; + $User.LastName   + &quot; (&quot;  + $User.Email + &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedUser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <formula>IF(TMN_User_Account__r.Salesforce_User_Account__r.ManagerId  !=null,  TMN_User_Account__r.Salesforce_User_Account__r.Manager.Email,  TMN_User_Account__r.Manager_Email__c)</formula>
        <inlineHelpText>Populated by TMN User Information.</inlineHelpText>
        <label>Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <formula>IF( TMN_User_Account__r.Salesforce_User_Account__r.Manager.LastName !=null,  TMN_User_Account__r.Salesforce_User_Account__r.Manager.FirstName + &apos; &apos; +  TMN_User_Account__r.Salesforce_User_Account__r.Manager.LastName , TMN_User_Account__r.Network_Username__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populated by TMN User Information.</inlineHelpText>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MgrLocationTitle__c</fullName>
        <formula>IF( NOT ISBLANK(Job_Title__c), &quot;Job Title: &quot; + Job_Title__c + &quot;     &quot;,&quot;&quot;) + IF(NOT ISBLANK( Location__c), &quot;Location: &quot; + Location__c + &quot;     &quot;,&quot;&quot; )+ IF(NOT ISBLANK( Manager_Name__c ),&quot;Manager: &quot; +  Manager_Name__c ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MgrLocationTitle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Group__c</fullName>
        <label>Operating Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password_Reset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Password Reset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password_Unlock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Password Unlock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <inlineHelpText>Select “Mentor Recruiter” for employees responsible for managing prospects, “Mentor Recruiter Manager” for managers who can approve Mentor homes, and “Reporter” for employees who can only view information (not add, edit or delete).</inlineHelpText>
        <label>Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Mentor Recruiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <inlineHelpText>If multiple users share a region and only recruit for one program they should be assigned to the appropriate program and undecided.  All other recruiters should be assigned “ARY+IDD+Undecided”  even if the state/region only offers one program.</inlineHelpText>
        <label>Programs</label>
        <picklist>
            <picklistValues>
                <fullName>ARY + Undecided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDD + Undecided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARY + IDD + Undecided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RegionName__c</fullName>
        <formula>Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RegionName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Add_Remove__c</fullName>
        <inlineHelpText>Add or remove a user from a region to to ensure routing is accurate and users are assigned the appropriate prospects from web inquires.  All deactivated users should be removed from their assigned region.</inlineHelpText>
        <label>Region Add/Remove</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Region__c.Type__c</field>
                <operation>equals</operation>
                <value>Region</value>
            </filterItems>
            <filterItems>
                <field>Region__c.Type__c</field>
                <operation>equals</operation>
                <value>State</value>
            </filterItems>
            <infoMessage>Select the Region to which you wish to add/remove the Recruiter</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>User Accounts</relationshipLabel>
        <relationshipName>User_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role2Text__c</fullName>
        <formula>SUBSTITUTE(TEXT(Role__c),&quot;-&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role2Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <inlineHelpText>Roles allow users to view data sets based on system hierarchy and area of responsibility.  Users may access all data within their own role and any lower roles.  Lower roles are indicated by colon and contain their parent role name</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>TMN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-  Cambridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-- CBNorth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--- IL-ARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---- IL-ARY:Marion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---- IL-ARY:Matteson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---- IL-ARY:O&apos;Fallon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---- IL-ARY:Peoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---- IL-ARY:Rockford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--- IN-ARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---- IN-ARY:Indiannapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---- IN-ARY:Merrillville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--- MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---- MA:Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---- MA:Hyannis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---- MA:Lawrence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---- MA:NewBedford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---- MA:Springfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---- MA:Worcester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--- NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---- NC:East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>----- NC:Jacksonville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>------ NC:Jacksonville-ClinicalUsers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>----- NC:Raleigh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>------ NC:Raleigh-ClinicalUsers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>----- NC:Rockingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>------ NC:Rockingham-ClinicalUsers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>----- NC:Wilmington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>------ NC:Wilmington-ClinicalUsers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---- NC:West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Route_To_Change_Info__c</fullName>
        <inlineHelpText>Enter additional information to be sent to the State Administrator</inlineHelpText>
        <label>Notes for State Administrator</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_Service_Center_Email__c</fullName>
        <formula>&apos;true&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Service Center Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceCenterActionMessage__c</fullName>
        <formula>&quot;Send requests to service center to add/deactivate users or reset passwords.  For activations/deactivations, remember to also send transfer and region routing requests to state administrators using the options below.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;div/&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Admin_Assignment__c</fullName>
        <formula>IF( Assign_State_Administrator__c  = TRUE, &quot;Assign as State Administrator&quot;, 
IF( Unassign_State_Administrator__c = TRUE, &quot;Unassign as State Administrator&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Admin Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMN_User_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TMN User Account</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>Account Administration</relationshipLabel>
        <relationshipName>Oracle_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Prospects_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For account deactivations, please transfer all records to the appropriate users.  For activations and account updates based on region changes, please transfer the appropriate records from other users as necessary.</inlineHelpText>
        <label>Transfer Prospects To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unassign_State_Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unassign State Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueIDText__c</fullName>
        <formula>IF(NOT ISBLANK(Unique_ID__c ),&quot;Unique ID: &quot; + Unique_ID__c ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueIDText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Update existing user account with new information</inlineHelpText>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_State_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Account Administration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>First_Name__c</columns>
        <columns>NAME</columns>
        <columns>Job_Title__c</columns>
        <columns>Activ__c</columns>
        <columns>TMN_User_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>User_Account_2</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>User Account 2</label>
    </listViews>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Update_with_No_Values</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Action__c) = &quot;Update&quot;,
Assign_State_Administrator__c = FALSE, 
Unassign_State_Administrator__c = FALSE,
ISPICKVAL(Role__c, &quot;&quot;),
ISPICKVAL(Profile__c, &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Action__c</errorDisplayField>
        <errorMessage>You have chosen nothing to Update. Update either assignment of State Administrator, Role, or Profile.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UseAcct_AddRemoveRegionProgram</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND( NOT ISBLANK(TEXT(Region_Add_Remove__c)), OR ( ISBLANK(TEXT(Programs__c)), ISBLANK( RegionName__c ) )),
AND( NOT ISBLANK(TEXT(Programs__c)), OR ( ISBLANK(TEXT(Region_Add_Remove__c)), ISBLANK( RegionName__c ) )),
AND( NOT ISBLANK( RegionName__c ), OR ( ISBLANK(TEXT(Programs__c)), ISBLANK(TEXT( Region_Add_Remove__c)) )) )</errorConditionFormula>
        <errorDisplayField>Region_Add_Remove__c</errorDisplayField>
        <errorMessage>When adding/removing a user from a Region, all three fields must contain a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserAcct_ActionRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
AND(ISCHANGED( Profile__c), NOT(ISPICKVAL(Profile__c, &quot;&quot;))),
AND(ISCHANGED(Role__c),NOT(ISPICKVAL(Role__c, &quot;&quot;))),
AND(ISCHANGED(Assign_State_Administrator__c), Assign_State_Administrator__c &lt;&gt; FALSE),
AND(ISCHANGED(Unassign_State_Administrator__c), Unassign_State_Administrator__c &lt;&gt; FALSE)),  ISPICKVAL(Action__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Action__c</errorDisplayField>
        <errorMessage>You must select an action to perform for the fields requested.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserAcct_Already_Active</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ActionText__c = &quot;Activation&quot;,  TMN_User_Account__r.Salesforce_User_Account__r.IsActive = TRUE)</errorConditionFormula>
        <errorDisplayField>Action__c</errorDisplayField>
        <errorMessage>User Account associated with TMN User is already Active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserAcct_Any_Action_No_TMN_User</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(TMN_User_Account__c), 
OR(
NOT(ISPICKVAL(Action__c, &quot;&quot;)),
Assign_State_Administrator__c = TRUE, 
Unassign_State_Administrator__c = TRUE,
NOT(ISPICKVAL(Role__c, &quot;&quot;)),
NOT(ISPICKVAL(Profile__c, &quot;&quot;))
)
)</errorConditionFormula>
        <errorDisplayField>TMN_User_Account__c</errorDisplayField>
        <errorMessage>Please associate the appropriate TMN User Account before requesting any actions for that user.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserAcct_AssignAndUnassign</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Assign_State_Administrator__c = TRUE, Unassign_State_Administrator__c = TRUE)</errorConditionFormula>
        <errorMessage>Assign State Administrator and Unassign State Administrator may not both be checked, please uncheck either or both</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserAcct_Assign_State_Admin</fullName>
        <active>true</active>
        <errorConditionFormula>AND( TMN_User_Account__c = &quot;&quot;, Assign_State_Administrator__c = TRUE
)</errorConditionFormula>
        <errorDisplayField>Assign_State_Administrator__c</errorDisplayField>
        <errorMessage>State Administrator Assignment cannot occur on non-existent User account. Please assign a TMN User and try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserAcct_Invalid</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TMN_User_Account__c  = &quot;&quot;,
OR(
CONTAINS(TEXT(Action__c),&quot;Password Reset&quot;),
CONTAINS(TEXT(Action__c),&quot;Deactivation&quot;)
))</errorConditionFormula>
        <errorDisplayField>Action__c</errorDisplayField>
        <errorMessage>Selected Action cannot be made on a non-existing User Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserAcct_Profile</fullName>
        <active>true</active>
        <description>Removed User.IsActive = Yes/No from error condition, because the user active field is not set to Yes/No before the validation cuts in. Also updated the TEXT(Role__c) Value to say not equal to null. Ryan J.</description>
        <errorConditionFormula>AND( TEXT(Profile__c) == &quot;&quot;, TEXT(Action__c) = &quot;Activation&quot;)</errorConditionFormula>
        <errorDisplayField>Profile__c</errorDisplayField>
        <errorMessage>Profile is required for User Account Activation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserAcct_Role</fullName>
        <active>true</active>
        <description>Removed User.IsActive = Yes/No from error condition, because the user active field is not set to Yes/No before the validation cuts in. Also updated the TEXT(Role__c) Value to say not equal to null. Ryan J.</description>
        <errorConditionFormula>AND( TEXT( Role__c ) == &quot;&quot;, TEXT(Action__c) = &quot;Activation&quot;)</errorConditionFormula>
        <errorDisplayField>Role__c</errorDisplayField>
        <errorMessage>Role is required for User Account Activation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserAcct_Route_To_Change</fullName>
        <active>false</active>
        <errorConditionFormula>OR(AND(ISBLANK( User_State_Administrator__c ), NOT ISBLANK(Route_To_Change_Info__c)),AND(NOT ISBLANK( User_State_Administrator__c ), NOT ISBLANK(Route_To_Change_Info__c)))</errorConditionFormula>
        <errorDisplayField>Route_To_Change_Info__c</errorDisplayField>
        <errorMessage>Both Route To Change Information and State Administrator selection must be entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserAcct_StateAdminRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
AND(ISCHANGED(Transfer_Prospects_To__c), Transfer_Prospects_To__c &lt;&gt; &quot;&quot;),  AND(ISCHANGED(Route_To_Change_Info__c), Route_To_Change_Info__c  &lt;&gt; &quot;&quot;), 
AND(ISCHANGED(Region_Add_Remove__c), ISPICKVAL(Region_Add_Remove__c, &quot;&quot;)),
AND(ISCHANGED(Region__c),   Region__c &lt;&gt; &quot;&quot;), 
AND(ISCHANGED(Programs__c), ISPICKVAL(Programs__c, &quot;&quot;))),  User_State_Administrator__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>User_State_Administrator__c</errorDisplayField>
        <errorMessage>Unable to perform action(s) without State Administrator filled in. State Administrator needs to be notified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserAcct_State_Admin_Assigned</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Assign_State_Administrator__c = TRUE,  State_Admin_Assignment__c = &quot;Yes&quot;)</errorConditionFormula>
        <errorDisplayField>Assign_State_Administrator__c</errorDisplayField>
        <errorMessage>State Administrator is currently Assigned</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserAcct_State_Admin_Unassign</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Unassign_State_Administrator__c = TRUE, State_Admin_Assignment__c = &quot;No&quot;)</errorConditionFormula>
        <errorDisplayField>Unassign_State_Administrator__c</errorDisplayField>
        <errorMessage>State Administrator is not currently Assigned</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserAcct_Unassign_State_Admin</fullName>
        <active>true</active>
        <errorConditionFormula>AND( TMN_User_Account__c = &quot;&quot;,Unassign_State_Administrator__c = TRUE
)</errorConditionFormula>
        <errorDisplayField>Unassign_State_Administrator__c</errorDisplayField>
        <errorMessage>State Administrator Unassignment cannot occur on non-existent User account. Please assign a TMN User and try again.</errorMessage>
    </validationRules>
</CustomObject>